--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blomsterapp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.0",
+    "next": "15.0.0",
     "papaparse": "^5.5.3",
     "react": "^18",
     "react-dom": "^18"
@@ -21,9 +22,9 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0",
+    "eslint-config-next": "15.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
-}
+ }
